--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "Este challenge tiene como objetivo usar herramientas básicas como js y git para conecterse, leer, interpretar y procesar información de transacciones que interactuan con contratos escritos en solidity.",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {
-    "chalk": "^4.1.1",
-    "solc": "^0.8.6",
+  "dependencies": {
+    "dotenv": "^10.0.0",
     "web3": "^1.4.0"
+  },
+  "devDependencies": {
+    "solc": "^0.8.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
